tests/build/widget_new/incorrect_arg_type4.stderr
error[E0277]: the trait bound `bool: IntoVar<GradientStops>` is not satisfied
  --> $DIR/incorrect_arg_type4.rs:10:20
   |
10 |             stops: true
   |                    ^^^^ the trait `IntoVar<GradientStops>` is not implemented for `bool`
   |
   = help: the following implementations were found:
             <bool as IntoVar<AutoSize>>
             <bool as IntoVar<CaptureMode>>
             <bool as IntoVar<FactorNormal>>
             <bool as IntoVar<FontFeatureState>>
           and 3 others
   = note: required by `background_gradient_ArgsImpl::<T_axis, T_stops>::new`
